refactor: add shared types directory with consolidated enums and interfaces

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "funding": [
     {
       "type": "paypal",
-      "url": "https://www.paypal.me/jrnvdb"
+      "url": "https://www.paypal.me/MickaelPalma"
     }
   ]
 }
