--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "homebridge": ">=1.5.0 || ^2.0.0-beta.0"
   },
   "main": "dist/src/index.js",
+  "customUi": true,
+  "customUiPath": "./homebridge-ui",
   "scripts": {
     "test": "jest",
     "test:updateSnapshots": "jest --updateSnapshot",
@@ -33,6 +35,7 @@
     "node-forge": "1.3.1"
   },
   "dependencies": {
+    "@homebridge/plugin-ui-utils": "^1.0.3",
     "daikin-controller-cloud": "2.4.2"
   },
   "devDependencies": {
