--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^8.20.0",
     "hap-nodejs": "^1.1.0",
     "homebridge": "^1.8.4",
+    "homebridge-config-ui-x": "^4.56.4",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "rimraf": "^3.0.2",
