--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "displayName": "Daikin Cloud",
   "platformname": "daikincloud",
   "name": "@mp-consulting/homebridge-daikin-cloud",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Integrate with the Daikin Cloud to control your Daikin air conditioning via the cloud",
   "license": "Apache-2.0",
   "repository": {
@@ -31,12 +31,8 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "overrides": {
-    "node-forge": "1.3.1"
-  },
   "dependencies": {
-    "@homebridge/plugin-ui-utils": "^1.0.3",
-    "daikin-controller-cloud": "2.4.2"
+    "@homebridge/plugin-ui-utils": "^1.0.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
