feat(auth): add mobile app authentication and WebSocket support
- Add Mobile App authentication using Daikin Onecta credentials
  - 5000 API calls/day (vs 200 for Developer Portal)
  - Automatic authentication without OAuth flow
- Add WebSocket real-time updates for instant device state changes
- Add dynamic settings UI with auth mode-specific defaults
- Add settings subtabs for better organization
- Add constants module for centralized configuration
- Fix HeaterCooler characteristic warnings in WebSocket handler
- Fix temperature validation to prevent undefined value warnings

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,8 @@ dist
 /.idea/
 .DS_Store
 test/hbConfig/
+
+# Test files with sensitive data
+test/mobile-tokens.json
+test/*.tokens.json
+*.tokenset
