--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "homebridge-config-ui-x": "^4.56.4",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "playwright": "^1.57.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.3.0",
