refactor: implement phase 1 improvements for code quality and maintainability
This commit implements foundational improvements focusing on type safety,
validation, code consolidation, security, and comprehensive documentation.

BREAKING CHANGES: None - all changes are backward compatible

Changes:
- Enable strict TypeScript checking (noImplicitAny, strictNullChecks)
- Add Zod validation layer for runtime type safety
- Consolidate WebSocket update logic (remove 180+ lines of duplication)
- Update GitHub Actions to v4 (remove deprecated warnings)
- Create comprehensive architecture documentation
- Add detailed implementation guide for remaining improvements
- Enhance CLAUDE.md with project-specific instructions

Type Safety:
- Enable noImplicitAny, strictNullChecks, strictFunctionTypes
- Fix 2 implicit any types in daikin-cloud.repository.ts
- All code now compiles with strict type checking

Validation:
- Add Zod v3.23.8 for runtime validation
- Create daikin-schemas.ts with validation schemas for:
  * TokenSet, RateLimitStatus
  * ManagementPoint, GatewayDevice
  * WebSocketDeviceUpdate
  * Configuration (DaikinClientConfig, MobileClientConfig, DaikinControllerConfig)
- Add validateWithZod() method to ConfigManager
- Provide validation helpers: validateData(), safeValidateData()

Code Consolidation:
- Refactor platform.ts to use UpdateMapper class
- Remove 180+ lines of duplicated WebSocket update logic
- Single source of truth for characteristic mapping
- handleWebSocketDeviceUpdate() reduced from 180 to 20 lines

Security:
- Verify token files use secure permissions (0o600)
- Update GitHub Actions workflows to v4:
  * actions/checkout@v2 -> @v4
  * actions/setup-node@v2 -> @v4
- Remove deprecated CI/CD warnings

Documentation:
- Create ARCHITECTURE.md (400+ lines):
  * System architecture diagrams
  * Component documentation
  * Data flow diagrams
  * Extension guides
  * Troubleshooting
- Create IMPLEMENTATION_GUIDE.md (800+ lines):
  * Detailed implementation ste

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
-    "noImplicitAny": false
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true
   },
   "include": [
     "src/"
