--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "zod": "^3.23.8"
   },
   "funding": [
     {
