--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "jest",
     "test:updateSnapshots": "jest --updateSnapshot",
-    "lint": "eslint src/**.ts --max-warnings=0",
+    "lint": "eslint 'src/**/*.ts' --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
     "release": "npm publish",
@@ -33,7 +33,8 @@
   ],
   "dependencies": {
     "@homebridge/plugin-ui-utils": "^1.0.3",
-    "ws": "^8.19.0"
+    "ws": "^8.19.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
@@ -47,12 +48,10 @@
     "homebridge-config-ui-x": "^4.56.4",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "playwright": "^1.57.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4",
-    "zod": "^3.23.8"
+    "typescript": "^4.4.4"
   },
   "funding": [
     {
