Switch to npm trusted publishing and add files field
- Add files field to package.json to reduce published package size
- Fix repository URL format for npm trusted publishing
- Update publish workflow to use OIDC (no tokens needed)
- Upgrade npm in CI for trusted publishing support (requires npm 11.5.1+)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mp-consulting/homebridge-daikin-cloud.git"
+    "url": "git+https://github.com/mp-consulting/homebridge-daikin-cloud.git"
   },
   "bugs": {
     "url": "https://github.com/mp-consulting/homebridge-daikin-cloud/issues"
@@ -56,5 +56,10 @@
   "funding": {
     "type": "paypal",
     "url": "https://paypal.me/mickaelpalma"
-  }
+  },
+  "files": [
+    "dist",
+    "homebridge-ui",
+    "config.schema.json"
+  ]
 }
