--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "customUi": true,
   "customUiPath": "./homebridge-ui",
   "scripts": {
-    "test": "jest",
-    "test:updateSnapshots": "jest --updateSnapshot",
-    "lint": "eslint 'src/**/*.ts' --max-warnings=0",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint . --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
+    "prepublishOnly": "npm run lint && npm run build",
     "release": "npm publish",
     "release:beta": "npm publish --tag beta"
   },
@@ -37,21 +39,19 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.14.6",
+    "@eslint/js": "^9.39.2",
+    "@types/node": "^24.0.0",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint": "^8.20.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "eslint": "^9.39.2",
     "hap-nodejs": "^1.1.0",
-    "homebridge": "^1.8.4",
-    "homebridge-config-ui-x": "^4.56.4",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "homebridge": "^2.0.0-beta.55",
+    "homebridge-config-ui-x": "^5.15.0",
+    "nodemon": "^3.1.11",
+    "rimraf": "^6.1.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
+    "vitest": "^4.0.18"
   },
   "funding": {
     "type": "paypal",
