--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "strictPropertyInitialization": true
+    "strictPropertyInitialization": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/"
